Fixed content width jumping
due to scroll bar

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 body, html{
     font-size:17px;
+    min-height:101%;
 }
 *{
     margin:0;
@@ -13,6 +14,9 @@ ul li, ol li{
 }
 input:active, input:focus, button:active, button:focus{
     outline:0;
+}
+input[type=submit]:hover{
+    cursor:pointer;
 }
 a{
     color:#C8102E;
@@ -180,6 +184,7 @@ header{
     padding:12px;
     width: calc(100% - 24px);
     height:40px;
+    overflow:hidden;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     transition:all 350ms;
 }
@@ -190,17 +195,19 @@ header .logo{
 }
 /* navigation */
 .activeDesktop{
-    text-decoration:underline !important;
+    background: #C8102E;
+    color: white !important;
 }
 #desktopNav{
+    box-sizing:border-box;
     display:none;
 }
 #desktopNav a{
     text-decoration:none;
     color:#C8102E;
     font-size:1.4em;
-    padding:0 5px;
-    margin:0 5px;
+    padding: 1em .4em;
+    margin:0;
 }
 #mobileNavOverlay{
     /*display:none;*/
